--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,9 @@ set -g @plugin 'tmux-plugins/tpm'
 # prefix + Ctrl-s - save;  prefix + Ctrl-r - restore.  https://github.com/tmux-plugins/tmux-resurrect
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'dracula/tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
 # restore vim/neovim session
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
@@ -13,6 +16,9 @@ set -g @continuum-restore 'on'
 set -g @resurrect-capture-pane-contents 'on'
 
 set -g mouse on
+set -g @dracula-plugins "cpu-usage ram-usage time"
+set -g @dracula-show-powerline true
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
