--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,7 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g mouse on
 set -g @dracula-plugins "cpu-usage ram-usage time"
 set -g @dracula-show-powerline true
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
